--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf artifacts cache"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +14,8 @@
     "dotenv": "^10.0.0",
     "ethers": "^5.4.6",
     "hardhat": "^2.6.1"
+  },
+  "dependencies": {
+    "@alch/alchemy-web3": "^1.1.4"
   }
 }
